# MiniRysRobotSoftware

./: .gitignore  .gitmodules  README.md
BehaviorTree.CPP-master/: CMakeLists.txt
btcpp_ros2_interfaces/: CMakeLists.txt
btcpp_ros2_interfaces/action/: Standard.action
btcpp_ros2_interfaces/msg/: DistancesAndTransform.msg
l6470-linux/: .clang-tidy  .gitlab-ci.yml  .uncrustify.cfg  CMakeLists.txt  README.md  package.xml
l6470-linux/docs/: Doxyfile
l6470-linux/examples/: CMakeLists.txt  example1.cpp  example2.cpp
l6470-linux/include/: L6470.hpp  l6470.h  motorsclass.h
l6470-linux/libs/sbc-linux-interfaces/: .gitlab-ci.yml  CMakeLists.txt  package.xml  sbc-linux-interfaces.sublime-project
l6470-linux/libs/sbc-linux-interfaces/examples/: CMakeLists.txt  exampleGPIO.cpp  exampleI2C.cpp  exampleSPI.cpp
l6470-linux/libs/sbc-linux-interfaces/include/: GPIOPin.hpp  I2CBus.hpp
l6470-linux/libs/sbc-linux-interfaces/src/: SPIBus.cpp
l6470-linux/libs/sbc-linux-interfaces/tools/: run-uncrustify.sh
l6470-linux/src/: L6470.cpp  l6470commands.cpp  l6470dump.cpp  l6470support.cpp  motorsclass.cpp
l6470-linux/tools/: build.sh  run-clang-tidy.sh  run-cppcheck.sh  run-uncrustify.sh
minirys_msgs/: CMakeLists.txt  README.md  package.xml
minirys_msgs/msg/: AngularPose.msg  BatteryStatus.msg  MotorCommand.msg  MotorDriverStatus.msg  RTTestResult.msg
minirys_msgs/srv/: RecordVideoStart.srv  RecordVideoStop.srv
minirys_ros2/: .clang-tidy  .gitlab-ci.yml  .uncrustify.cfg  CMakeLists.txt  LICENSE  README.md  package.xml
minirys_ros2/config/: minirys1_params.yaml  minirys2_params.yaml  minirys3_params.yaml  minirys4_params.yaml  params.yaml  rttest_tuned.yaml
minirys_ros2/docs/: Doxyfile
minirys_ros2/include/minirys_ros2/helpers/: PIDRegulator.hpp  RTTExecutor.hpp  TimeMeasure.hpp
minirys_ros2/include/minirys_ros2/nodes/: BatteryNode.hpp  CommunicationNode.hpp  DistanceNode.hpp  FanNode.hpp  FanRegulatorNode.hpp  GrabberControllerNode.hpp  GrabberNode.hpp  IMUNode.hpp  JoyconReceiverNode.cpp  JoyconReceiverNode.hpp  MotorsControllerNode.hpp  MotorsNode.hpp  OdometryNode.hpp  RTTestNode.hpp  ServoControllerNode.hpp  ServoNode.hpp  TemperatureNode.hpp  pid.cpp
minirys_ros2/include/minirys_ros2/test/: CircleTestNode.hpp  LinearTestNode.hpp
minirys_ros2/launch/: minirys.launch.py  minirys_cs.launch.py  minirys_cs_lidar.launch.py  minirys_cs_rttest.launch.py  minirys_cs_rttest_rt.launch.py  minirys_m.launch.py  minirys_tof.launch.py  minirys_ve.launch.py  minirys_ve_lidar.launch.py  minirys_vr.launch.py  minirys_vr_lidar.launch.py  minirys_vr_tof.launch.py
minirys_ros2/pkgs/: uncrustify_0.72.0-1_focal_amd64.deb
minirys_ros2/src/executables/: battery.cpp  circle_test.cpp  distance.cpp  fan.cpp  grabber.cpp  grabber_controller.cpp  imu.cpp  joycon_receiver_node.cpp  linear_test.cpp  minirys_cs.cpp  minirys_cs_lidar.cpp  minirys_cs_rttest.cpp  minirys_cs_rttest_rt.cpp  minirys_ve.cpp  minirys_vr.cpp  motors.cpp  odometry.cpp  sensors.cpp  servo.cpp  temperature.cpp
minirys_ros2/src/helpers/: PIDRegulator.cpp  RTTExecutor.cpp  TimeMeasure.cpp
minirys_ros2/src/nodes/: .MotorsNode.cpp.swp  BatteryNode.cpp  CommunicationNode.cpp  DistanceNode.cpp  FanNode.cpp  FanRegulatorNode.cpp  GrabberControllerNode.cpp  GrabberNode.cpp  IMUNode.cpp  JoyconReceiverNode.cpp  MotorsControllerNode.cpp  MotorsNode.cpp  OdometryNode.cpp  RTTestNode.cpp  ServoControllerNode.cpp  ServoNode.cpp  TemperatureNode.cpp
minirys_ros2/src/test/: CircleTestNode.cpp  LinearTestNode.cpp
minirys_ros2/tools/: doxygen.sh  run-uncrustify.sh
minirys_sensors/: .clang-tidy  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
minirys_sensors/docs/: Doxyfile
minirys_sensors/examples/: CMakeLists.txt  example_adc.cpp  example_imu.cpp  example_minirys.cpp  example_temperature.cpp
minirys_sensors/include/: LSM6.hpp  LSM6_defs.hpp  MAX1161.hpp  MCP9808.hpp
minirys_sensors/src/: LSM6.cpp  MAX1161.cpp  MCP9808.cpp
minirys_sensors/tools/: build.sh
pid_regulator/: CMakeLists.txt  README.md  package.xml
pid_regulator/include/pid_regulator/: PIDRegulator.hpp
pid_regulator/src/: PIDRegulator.cpp
sbc-linux-interfaces/: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  package.xml
sbc-linux-interfaces/docs/: Doxyfile
sbc-linux-interfaces/examples/: CMakeLists.txt  examplePWM.cpp  exampleSPI.cpp
sbc-linux-interfaces/include/: I2CBus.hpp  PWMPin.hpp  SPIBus.hpp  bcm2835.hpp
sbc-linux-interfaces/src/: GPIOPin.cpp  I2CBus.cpp  PWMPin.cpp  SPIBus.cpp  bcm2835.cpp
shuttlecock_detect/: CMakeLists.txt  package.xml  yolo.cpp  yolo.h  yolov7_time_test.cpp
shuttlecock_detect/behavior_trees/: detect_shuttlecock.xml
shuttlecock_detect/config/: params.yaml
shuttlecock_detect/include/shuttlecock_detect/actions/: BackUpAction.hpp  DeliverShuttlecockAction.hpp  GetToShuttlecockAction.hpp  PickShuttlecockAction.hpp  RotateAction.hpp  SearchingShuttlecockAction.hpp
shuttlecock_detect/include/shuttlecock_detect/helpers/: Yolov7.hpp
shuttlecock_detect/include/shuttlecock_detect/nodes/: DetectorNode.hpp  DistancesNode.hpp
shuttlecock_detect/include/shuttlecock_detect/servers/: BackUpServer.hpp  DeliverShuttlecockServer.hpp  GetToShuttlecockServer.hpp  PickShuttlecockServer.hpp  RotateServer.hpp  SearchingShuttlecockServer.hpp
shuttlecock_detect/launch/: detect_tree.launch.py  detector.launch.py
shuttlecock_detect/src/actions/: BackUpAction.cpp  DeliverShuttlecockAction.cpp  GetToShuttlecockAction.cpp  PickShuttlecockAction.cpp  RotateAction.cpp  SearchingShuttlecockAction.cpp
shuttlecock_detect/src/executables/: client_executor.cpp  detector.cpp  imgtest.cpp  server_executor.cpp  yolov7_time_test.cpp
shuttlecock_detect/src/helpers/: Yolov7.cpp
shuttlecock_detect/src/nodes/: DetectorNode.cpp  DistancesNode.cpp
shuttlecock_detect/src/servers/: BackUpServer.cpp  DeliverShuttlecockServer.cpp  GetToShuttlecockServer.cpp  PickShuttlecockServer.cpp  RotateServer.cpp  SearchingShuttlecockServer.cpp
shuttlecock_detect/weights/: best100ep1inp.ncnn.param
(+78 files in other folders)
