<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>minirys_ros2</name>
  <version>0.0.1</version>
  <description>ROS2 nodes for the MiniRyś robot</description>

  <maintainer email="mjbogusz@gitlab.com">MJBogusz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rttest</depend>
  <depend>tlsf_cpp</depend>

  <depend>v4l2_camera</depend>
  <depend>boost</depend>

  <depend>minirys_msgs</depend>
  <depend>minirys_sensors</depend>
  <depend>vl53l1x-linux</depend>
  <depend>l6470-linux</depend>
  <depend>sbc-linux-interfaces</depend>
  <depend>ldlidar_stl_ros2</depend>
  <depend>pid_regulator</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
